add swithcing between editor windows, add tasks and task checking, add input of html and css files

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,4 +14,14 @@
 .mission {
   height: 25vh;
   width: 100vw;
+  display: flex;
+}
+.task {
+  height: 100%;
+  width: 80%;
+}
+
+.buttons {
+  height: 100%;
+  width: 20%;
 }
