--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -40,7 +40,65 @@ border: 1px solid #bfbfbf !important;
   font-size: 100%;
   width: 100%;
 }
-.editor-select {
-  display: flex;
-  justify-content: space-evenly;
+
+
+
+
+
+.tabs {
+  position: relative;
+  min-height: 98.6%; /* This part sucks */
+  clear: both;
+  margin: 1.7% 0;
+}
+.tab {
+  float: left;
+}
+.tab label {
+  background: #eee;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-left: -1px;
+  position: relative;
+  left: 1px;
+}
+.tab [type="radio"] {
+  opacity: 0;
+}
+.content {
+  position: absolute;
+  top: 28px;
+  left: 0;
+  background: white;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+}
+.content > * {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: all 0.6s ease;
+}
+[type="radio"]:focus ~ label {
+  outline: 2px solid blue;
+}
+[type="radio"]:checked ~ label {
+  background: white;
+  border-bottom: 1px solid white;
+  z-index: 2;
+}
+[type="radio"]:checked ~ label ~ .content {
+  z-index: 1;
+}
+[type="radio"]:checked ~ label ~ .content > * {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.cm-line-label {
+  border: none !important;
+  background: none !important;
+  padding: 0px !important;
 }
