--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -102,3 +102,47 @@ border: 1px solid #bfbfbf !important;
   background: none !important;
   padding: 0px !important;
 }
+
+
+.form-container {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: #f2f2f2;
+}
+
+/* Styling for the button */
+.form-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+#buttons {
+  transition: all 0.6s ease;
+}
+
+.respond {
+  margin: 0px;
+}
+
+
+
+.alert {
+  width: 20%;
+  height: 5%;
+  line-height: 100px;
+  background-color: red;
+  color: white;
+  text-align: center;
+  z-index: 100;
+  position: absolute;
+  top: 30%;
+  left: 45%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 20%;
+  height: 20%;
+}
